<resources>
    <string name="app_name">EasyWeb IDE</string>
    <string name="error">出错了</string>
    <string name="done">已完成</string>
    <string name="close">关闭</string>
    <string name="apply">应用</string>
    <string name="alarm">警告</string>
    <string name="inf">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="next">下一个</string>
	<string name="iknow">我知道了</string>
    <string name="check">查看</string>
    <string name="need_notic">需要注意</string>
    <string name="copyright">版权信息</string>
    <string name="copyright_msg">开发者：Treep\n“酷安(coolapk.com)” 是 EasyWeb IDE 的主要发布渠道，请谨慎使用通过其他渠道获取的 EasyWeb IDE。\n©Venter 2022.</string>
    <string name="manage_my_user">管理本地用户存档</string>
    <string name="user_create">创建用户存档</string>
    <string name="user_describle">拥有用户存档后，你可以享受更人性化的体验，且一个账户可供多个应用分享。此过程不是必须的，你可以跳过。</string>
    <string name="make_your_username">拟定你的用户名</string>
    <string name="user_err">此用户名包含某些非法字符或长度超过12个字符，请重新输入</string>
    <string name="venter_service">Venter 服务</string>
    <string name="main_about">关于</string>
    <string name="main_about_demo">支持帮助</string>
    <string name="main_about_writter">开发者：Treep</string>
    <string name="main_about_love">捐助支持</string>
    <string name="main_love_title">评价与捐助</string>
    <string name="main_love_message">这是一条漫长的道路， EasyWeb IDE 的维护与更新离不开开发者的努力，但更离不开广大用户真情支持；\n\n在这里非常诚恳的乞求您的一个好评或一点捐助，这将会是除下载量外开发者最大的动力！\n\n❤</string>
    <string name="main_about_feedback">反馈建议</string>
    <string name="main_about_findupdate">检查更新</string>
    <string name="main_about_newver">当前已是最新版本</string>
	<string name="cant_check_update">检查更新失败</string>
    <string name="main_File">文件</string>
    <string name="main_File_open">打开...</string>
    <string name="main_File_create">创建...</string>
    <string name="main_File_copy">克隆...</string>
    <string name="main_File_example">示例...</string>
    <string name="main_Tools">工具</string>
    <string name="main_new_file_name">拟定新建名称</string>
	<string name="new_project_type">新建项目...</string>
	<string name="new_proj_usual">HTML 项目</string>
	<string name="new_proj_php">PHP 项目</string>
    <string name="new_proj_easyapp">EasyApp 项目</string>
    <string name="main_new_file_json_name">新文件</string>
    <string name="main_new_file_cannot_create">无法创建文件</string>
    <string name="main_new_file_exists">当前目录下存在相同名称文件或目录</string>
    <string name="main_open_file_open_file_error">不支持打开此文件</string>
    <string name="set_this_proj">配置你的 EasyApp</string>
    <string name="main_More">更多</string>
    <string name="main_More_menu_NewProject">新建站点</string>
    <string name="main_More_menu_Refresh">刷新目录</string>
    <string name="main_create_add">添加至项目...</string>
    <string name="main_project_manifest">配置项目</string>
    <string name="main_project_service">部署到服务器</string>
	<string name="main_project_reg_jsres">注册框架</string>
    <string name="main_project_pack">打包为压缩文件</string>
    <string name="main_project_manifest_noname">请填写站点名称</string>
    <string name="main_explorer">站点管理器</string>
    <string name="main_More_explorer_NoProject">当前没有打开站点</string>
    <string name="main_More_explorer_NoProject_menu_CreateProject">创建站点</string>
    <string name="choose_website">打开此站点</string>
    <string name="choose_folder">选择文件夹</string>
    <string name="back">上一层</string>
    <string name="home">返回原目录</string>
    <string name="show_projects">显示项目</string>
    <string name="read_error">无法读取目录</string>
    <string name="cant_back">当前已在根目录</string>
    <string name="main_open_cant">不支持打开此格式文件</string>
    <string name="main_open_opened">此文件已打开</string>
    <string name="main_open_error">打开文件失败，请检查是否拥有足够权限或文件是否存在</string>
    <string name="main_save_isSaveFile_title">是否保存当前文件?</string>
    <string name="main_save_isSaveFile_btton">保存</string>
    <string name="main_save_isSaveFile_dontSave">不保存</string>
    <string name="main_save_error">保存失败，请检查是否拥有足够权限或目录是否存在</string>
    <string name="main_save_isClose">你还没有保存，是否直接关闭此文件?</string>
    <string name="wait">请稍等</string>
    <string name="main_menu_save">保存</string>
	<string name="insert">插入</string>
    <string name="main_menu_add">插入...</string>
	<string name="main_menu_review_element">审查元素</string>
    <string name="main_menu_format">格式化代码</string>
    <string name="main_menu_add_title">在光标处插入...</string>
    <string name="main_menu_run">运行</string>
    <string name="main_menu_pause">暂停运行当前脚本</string>
    <string name="main_output">控制台</string>
    <string name="main_menu_clear">清空</string>
    <string name="main_menu_js_add">插入脚本代码</string>
    <string name="main_menu_stop">停止</string>
	<string name="main_menu_debug_setting">调试预设</string>
    <string name="main_review">页面预览器</string>
    <string name="main_menu_review">预览</string>
	<string name="review_with_settings">高级预览</string>
    <string name="main_menu_refresh">刷新</string>
    <string name="main_menu_review_msg">网页信息</string>
    <string name="main_menu_close">关闭</string>
    <string name="main_menu_add_choose_color_title">选取颜色</string>
    <string name="main_menu_add_style_title">插入样式</string>
    <string name="main_menu_add_style_font">字体</string>
    <string name="main_menu_add_style_backgroon">背景</string>
    <string name="main_menu_add_style_margin">边距</string>
    <string name="main_menu_add_style_border">框</string>
    <string name="main_menu_add_style_positioning">定位</string>
    <string name="main_menu_add_style_amin">动画</string>
	<string name="main_menu_add_style_color">颜色</string>
	<string name="main_menu_add_style_paged_media">分页媒体</string>
	<string name="main_menu_add_style_dimension">尺寸</string>
	<string name="main_menu_add_style_content">内容生成</string>
	<string name="main_menu_add_style_table">表</string>
	<string name="main_menu_add_style_hyperlink">超链接</string>
	<string name="main_menu_add_style_print">打印</string>
	<string name="main_menu_add_style_transition">过度与转换</string>
	<string name="main_menu_add_style_ui">用户界面</string>
    <string name="main_More_loading">加载中</string>
    <string name="main_More_done">完成</string>
    <string name="main_More_preview_goback">后退</string>
    <string name="main_More_preview_go">前进</string>
	<string name="full_screen_preview">全屏预览</string>
    <string name="main_menu_run_output">输出</string>
    <string name="main_menu_run_error">运行出错</string>
    <string name="main_explorer_can_not_goback">已在根目录</string>
    <string name="main_explorer_website">站点</string>
    <string name="unkown_website">(本地站点)</string>
    <string name="main_explorer_close">关闭站点</string>
    <string name="main_explorer_open_with">其他打开方式</string>
    <string name="main_explorer_open_with_dir">当前选择的为目录</string>
    <string name="main_explorer_delete">删除</string>
    <string name="main_explorer_rename">重命名</string>
    <string name="main_explorer_copy_path">复制路径...</string>
    <string name="main_explorer_copy_type">复制模式</string>
    <string name="main_explorer_copy_full_path">复制完整路径</string>
    <string name="main_explorer_copy_website_path">复制相对于站点根目录路径</string>
	<string name="main_explorer_copy_related_file_path">复制相对于当前打开文件路径</string>
    <string name="main_explorer_copy_done">已复制</string>
    <string name="main_explorer_copy">复制到指定目录</string>
    <string name="main_explorer_move">移动到指定目录</string>
    <string name="main_explorer_delete_dialog">确定进行删除?</string>
    <string name="delete_manifest_alert">[manifest.json] 是 EasyWeb IDE 站点的重要配置文件。删除后，你将无法在 EasyWeb IDE 中正常的编辑此项目。</string>
	<string name="empty_file">空文件</string>
    <string name="main_create_html">HTML - 超文本标记文件</string>
    <string name="main_create_css">CSS - 层叠样式表</string>
    <string name="main_create_js">JS - 前端脚本</string>
    <string name="main_create_php">PHP - PHP 服务器端脚本</string>
    <string name="main_create_php_web">PHP - 可携带 HTML 元素的 PHP 服务器端脚本</string>
    <string name="main_create_xml">XML - 可扩展标记文件</string>
    <string name="main_create_jss">JSS - EasyWeb Server 服务器端脚本</string>
    <string name="main_create_website_user">的网站</string>
    <string name="main_create_website">我的网站</string>
    <string name="main_create_folder">新建文件夹</string>
    <string name="main_close_app">是否退出应用?</string>
    <string name="FindUpdataMessageTitle">发现更新</string>
    <string name="run_error">运行过程中出错：</string>
    <string name="zip_pic">图片压缩</string>
    <string name="color">颜色</string>
    <string name="style">样式</string>
    <string name="tag">标签</string>
    <string name="add_style_title">插入样式</string>
    <string name="add_tag_title">插入标签</string>
    <string name="add_tag_msg">键入插入标签类型名称（如\'div\',\'img\'等）</string>
    <string name="add_no_end_tag">插入无结束型标签</string>
    <string name="add_tag">插入一般标签</string>
    <string name="add">增加到</string>
    <string name="sectioned">已选择</string>
    <string name="add_div">增加Div</string>
    <string name="main_File_copy_msg">请输入有效网络文件地址</string>
    <string name="main_File_copy_cantconnect">无法启动克隆</string>
    <string name="main_File_copy_example">如“http://hostname/index.html”</string>
    <string name="main_check_msg">点击空白处关闭此窗口</string>
    <string name="main_update_title">发现更新 • &#160;</string>
    <string name="main_update_btn">立即更新</string>
    <string name="main_example_base64">Base64加载图片</string>
    <string name="charbutton_undo">撤销</string>
    <string name="charbutton_redo">重做</string>
	<string name="charbutton_table">↹</string>
    <string name="add_em_div">节</string>
    <string name="add_em_a">超链接</string>
    <string name="add_em_abbr">缩写词语表示</string>
    <string name="add_em_img">图像</string>
    <string name="add_em_bdi">文本方向隔离</string>
    <string name="add_em_bdo">文本方向覆盖</string>
    <string name="add_em_style_text">带格式的文本</string>
    <string name="add_em_hr">水平线</string>
    <string name="add_em_br">换行</string>
    <string name="add_em_table">表格</string>
    <string name="add_em_script">脚本</string>
    <string name="add_em_meta">元数据</string>
    <string name="add_em_link">链接</string>
    <string name="add_css">层叠样式</string>
    <string name="add_link">链接元素</string>
	<string name="add_audio">音频</string>
	<string name="add_video">视频</string>
    <string name="add_ID">ID</string>
    <string name="add_class">类</string>
    <string name="add_size">大小</string>
    <string name="width">水平长度（px）</string>
    <string name="height">垂直长度（px）</string>
    <string name="add_style">样式</string>
    <string name="add_min_size">最小大小</string>
    <string name="add_max_size">最大大小</string>
    <string name="add_dir">内容方向</string>
    <string name="add_draggable">可拖动性</string>
    <string name="add_accesskey">触发按键</string>
    <string name="key_code">按键代码（如\'a\',\'b\',\'c\',\'1\',\'2\',\'3\'等）</string>
    <string name="add_contenteditable">可编辑性</string>
    <string name="add_dropzone">可拖动时允许复制、移动、超链接性</string>
    <string name="add_lang">语言</string>
    <string name="lang_code">语言代码（如\'en\',\'zh\',\'fr\',\'de\'等）</string>
    <string name="add_title">提示文字</string>
    <string name="default_">默认</string>
    <string name="add_down">指定下载链接</string>
    <string name="add_href">指定目标链接（填写\'#\'与链接 ID 可触发锚）</string>
    <string name="add_target">指定何处打开链接</string>
    <string name="add_a_type">指定链接文档文本的MIME类型</string>
    <string name="add_mime">MIME类型</string>
    <string name="add_a_rel">指定当前文档与被链接文档关系</string>
    <string name="add_img_alt">替代文本</string>
    <string name="add_img_src">图像链接</string>
    <string name="add_text_style">样式标签</string>
    <string name="add_script_async">当为外部脚本时启用异步执行脚本</string>
    <string name="add_script_charset">当为外部脚本时规定文本字符编码</string>
    <string name="add_script_charset_ex">字符编码值（如\'ISO-8859-1\',\'UTF-8\'）</string>
    <string name="add_script_defer">当为外部脚本时启用页面解析完成后执行脚本</string>
    <string name="alert_handler_path">处理器路径</string>
    <string name="alert_JSS_path">JSS 文件路径</string>
    <string name="alert_msg">信息</string>
	<string name="join_chat">加入群聊</string>
	<string name="pack_apk">转换为应用</string>
	<string name="get_hopweb">获取 HopWeb Editor</string>
</resources>