<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="top|center">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="10dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/alert_handler_path"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:id="@+id/actv_dialog_handler"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/alert_JSS_path"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_marginTop="10dp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:id="@+id/actv_dialog_jss"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/alert_msg"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_marginTop="10dp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:id="@+id/actv_dialog_alert"/>

			</LinearLayout>

		</RelativeLayout>

	</ScrollView>

</LinearLayout>

